--- a/java/semantickernel-bom/pom.xml
+++ b/java/semantickernel-bom/pom.xml
@@ -82,7 +82,7 @@
             <dependency>
                 <groupId>com.azure</groupId>
                 <artifactId>azure-ai-openai</artifactId>
-                <version>1.0.0-beta.8</version>
+                <version>1.0.0-beta.9</version>
             </dependency>
             <dependency>
                 <groupId>com.azure</groupId>
@@ -93,6 +93,11 @@
                 <groupId>com.azure</groupId>
                 <artifactId>azure-core</artifactId>
                 <version>1.49.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.azure</groupId>
+                <artifactId>azure-search-documents</artifactId>
+                <version>11.7.0-beta.3</version>
             </dependency>
 
             <dependency>
